fixed center align in pages

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-*{
-    text-align: center;
-}
 .tooltip {
     position: absolute;
     top: 28px;
